# schemas-package-template

./: cookiecutter.json
{{ cookiecutter.package_name }}/: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  pyproject.toml  tox.ini
{{ cookiecutter.package_name }}/.github/workflows/: ci.yml
{{ cookiecutter.package_name }}/docs/: index.rst
{{ cookiecutter.package_name }}/src/{{ cookiecutter.module_name }}/: integration.py
